examples/minimal/oidc-intercept-policy.yaml
# Copyright 2025 Tetrate
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authservice
  # Applying this policy to the application namespace will intercept all requests
  # that get to the sidecars in the namespace and forward them to the Authservice.
spec:
  action: CUSTOM
  provider:
    # Name defined in the extensionProviders property in the MeshConfig
    # (the `istio` ConfigMap in the istio-system namespace)
    name: authservice-grpc
  # A single empty rule will force all requests to be forwarded to the external
  # authorization backend, as long as the workload is captured by the selectors
  # configured above.
  rules:
    - {}
